Lista de Dados Avançada em andamento

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,7 +52,7 @@
     <string name="voltar">Voltar</string>
 
     <!--SOBRE NOS-->
-    <string name="aboutPt1">Nós somos uma empresa formada atualmente por 4 funcionarios (3 motoristas e 1 auxiliar administrativo) e 2 sócios"
+    <string name="aboutPt1">Nós somos uma empresa formada atualmente por 4 funcionarios (3 motoristas e 1 auxiliar administrativo) e 2 sócios
     </string>
 
     <string name="aboutPt2">Criada em 2008 por Osvaldo de Oliveira e Eliana de Fátima Buzin, visávamos apenas o transporte de mercadorias como autonomos, e hoje, alguns anos depois temos uma determinada importância no transporte de suinos
