Máscara em campo Placa

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,7 +38,7 @@
 
     <string name="valor">Valor</string>
 
-    <string name="inserirVeiculo">INSERIR NOVO VEICULO</string>
+    <string name="inserirVeiculo">INSERIR NOVO VEÍCULO</string>
     <string name="inserirTipoVeiculo">Veiculo(Placa)</string>
     <string name="veiculo">Veiculo(Placa)</string>
 
